--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,10 @@ REACT_APP_ARBITRUM_TESTNET_ALCHEMY=""
 # - in Development node URLs must be insecure `http://`
 REACT_APP_ETHEREUM_SELF_HOSTED_NODE="https://ipAddress:port"
 
+REACT_APP_BSC_SELF_HOSTED_NODE="https://bsc-dataseed1.ninicoin.io https://bsc-dataseed1.defibit.io https://bsc-dataseed.binance.org"
+REACT_APP_BSC_TESTNET_SELF_HOSTED_NODE = "https://data-seed-prebsc-1-s1.binance.org:8545 https://data-seed-prebsc-1-s1.binance.org:8545 https://data-seed-prebsc-1-s1.binance.org:8545"
+
+
 REACT_APP_ARBITRUM_SELF_HOSTED_NODE="https://ipAddress:port"
 REACT_APP_AVALANCHE_SELF_HOSTED_NODE="https://ipAddress:port"
 
