updated .env.example with BSC nodes

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ REACT_APP_ARBITRUM_ALCHEMY_IDS=""
 # - you can pick up INFURA_IDS at https://infura.io/
 REACT_APP_INFURA_IDS=""
 
+REACT_APP_BSC_SELF_HOSTED_NODE=""
+REACT_APP_BSC_TESTNET_SELF_HOSTED_NODE = ""
+
 # add a TESTNET ALCHEMY API KEY
 # - only 1 ID is required, multiple IDS should be separated by whitespace
 REACT_APP_ETHEREUM_TESTNET_ALCHEMY=""
